[Misc] Fix SonarQube issues by making public static constants immutable (#424)
* java:S2386 mutable fields should not be "public static"

Co-authored-by: Vincent Massol <vincent@massol.net>